# discoger

./: Dockerfile  README.md  config.ini  config.ini.exemple  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-publish.yml  python-publish.yml  tests.yml
discoger/: __init__.py  _info.py  checker.py  client.py  database.py  discoger.py  scrap.py  utils.py
tests/: test_checker.py  test_scrap.py
