[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "discoger"
description = "Get notification from Discogs"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "Beudbeud", email = "beudbeud@gmail.com" }]
keywords = ["discogs", "telegram", "bot"]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "beautifulsoup4==4.12.2",
    "curl_cffi>=0.15",
    "pyTelegramBotAPI==4.11.0",
    "python3-discogs-client==2.6",
    "schedule==1.2.0",
    "yamldb==0.1.3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/beudbeud/discoger"

[project.scripts]
discoger = "discoger.client:main"

[tool.setuptools]
packages = ["discoger"]

[tool.setuptools.dynamic]
version = { attr = "discoger._info.__version__" }
